--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,21 @@
+---
+---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
-  <body>
+  <body class="fanzine">
     {% include navigation.html %}
-  	{{ content }}
+    <div class="container">
+      <div class="row">
+      	{{ content }}
+      </div>
+    </div>
     {% include navigation.html %}
   </body>
 </html>
